# adk-ge-auth-exp

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_deployed_agent.py  test_spanner_access.py
.github/workflows/: unit-tests.yaml
docs/: SECURITY.md
spanner_agent/: agent.json  agent.py  agent_engine_app.py  auth_wrapper.py  requirements.txt
tests/: test_auth_wrapper.py
tests/integration/: test_a2a_bearer_token.py  test_agent_engine.py  test_custom_spanner_tools.py  test_deployed_a2a.py  test_spanner_isolation.py
